--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Search for a movie..." id="modalSearchInput">
                 <div class="search-results" id="modalSearchResults"></div>
+                <div style="width: 100%; text-align: end; font-size: 15px;">
+                    Source: <a href="https://www.themoviedb.org" style="color: white;"><img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg" style="width: 80px; margin-left: 5px;"></a>
+                </div>
             </div>
         </div>
         <div class="modal-actions">
@@ -147,7 +150,7 @@
                 <div class="movie-details-year" id="modal-movie-year"></div>
                 <div class="movie-details-genres" id="modal-movie-genres"></div>
                 <div class="movie-details-actions">
-                    <h3>Rate:</h3>
+                    <h3>Rate</h3>
                     <div class="movie-details-ratings" id="modal-movie-ratings">
                         <button class="rating-btn"><span>👎 Did not like it</span></button>
                         <button class="rating-btn"><span>👍 Liked it</span></button>
@@ -156,7 +159,6 @@
                 </div>
                 <div class="movie-details-external-ratings" id="modal-movie-external-ratings"></div>
                 <div class="movie-details-streaming" id="modal-movie-streaming">
-                    <h3>Available on:</h3>
                     <div class="streaming-services" id="modal-streaming-services"></div>
                 </div>
             </div>
@@ -165,7 +167,7 @@
             <div class="movie-details-description" id="modal-movie-description"></div>
         </div>
         <div class="movie-details-streaming" id="modal-movie-streaming">
-            <h3>Also Watch:</h3>
+            <h3>Also Watch</h3>
             <div class="also-watch-movies">
                 <div class="also-watch-movie">
                     <div class="also-watch-poster">
@@ -199,5 +201,32 @@
         <button class="close-modal-btn">×</button>
     </div>
 </div>
+
+<div class="about-credits">
+    <div class="about-section">
+        <h2>About</h2>
+        <p>Hi! I'm Alex, a beginner developer who loves movies and technology. This watchlist application was created to help movie enthusiasts like myself keep track of films they want to watch and share their movie journey with others.</p>
+        <!-- <p>Feel free to connect with me on <a href="https://github.com/AlexPGdev" target="_blank" style="color: #00ffff;">GitHub</a> or reach out if you have any questions or suggestions!</p> -->
+    </div>
+    
+    <div class="credits-section">
+        <h2>Credits</h2>
+        <div class="credits-content">
+            <div class="credit-item">
+                <h3>Data Sources</h3>
+                <ul>
+                    <li>Movie data provided by <a href="https://www.themoviedb.org" target="_blank" style="color: #00ffff;"><img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg" style="width: 80px;"></a></li>
+                    <li>Streaming availability data provided by <a href="https://www.justwatch.com/" target="_blank" style="color: #00ffff;"><img src="https://www.themoviedb.org/assets/2/v4/logos/justwatch-c2e58adf5809b6871db650fb74b43db2b8f3637fe3709262572553fa056d8d0a.svg" style="width: 80px;"></a></li>
+                    <li>Movie ratings provided by <a href="https://www.omdbapi.com/" target="_blank" style="color: white;">OMDb API</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<footer style="margin-left: auto; margin-right: auto; text-align: center;">
+    Made with ❤️ by <a href="https://github.com/AlexPGdev" target="_blank" style="color: white;">AlexPG</a>
+    <br>
+    <p style="font-size: 13px;">This product uses the TMDB API but is not endorsed or certified by TMDB.</p>
+</footer>
 </body>
 </html>
