--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <div id="ai-loader" class="ai-loader" style="display: none;">
             <div class="loader-spinner"></div>
-            <div class="loader-text">Fetching AI Recommendations...</div>
+            <!-- <div class="loader-text">Fetching AI Recommendations...</div> -->
         </div>
     </div>
 </div>
