--- a/index.html
+++ b/index.html
@@ -205,15 +205,13 @@
 <div class="about-credits">
     <div class="about-section">
         <h2>About</h2>
-        <p>Hi! I'm Alex, a beginner developer who loves movies and technology. This watchlist application was created to help movie enthusiasts like myself keep track of films they want to watch and share their movie journey with others.</p>
-        <!-- <p>Feel free to connect with me on <a href="https://github.com/AlexPGdev" target="_blank" style="color: #00ffff;">GitHub</a> or reach out if you have any questions or suggestions!</p> -->
+        <p>This watchlist application was created to help movie enthusiasts keep track of films they want to watch and share their movie journey with others.</p>
     </div>
     
     <div class="credits-section">
-        <h2>Credits</h2>
+        <h2>Data Sources</h2>
         <div class="credits-content">
             <div class="credit-item">
-                <h3>Data Sources</h3>
                 <ul>
                     <li>Movie data provided by <a href="https://www.themoviedb.org" target="_blank" style="color: #00ffff;"><img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg" style="width: 80px;"></a></li>
                     <li>Streaming availability data provided by <a href="https://www.justwatch.com/" target="_blank" style="color: #00ffff;"><img src="https://www.themoviedb.org/assets/2/v4/logos/justwatch-c2e58adf5809b6871db650fb74b43db2b8f3637fe3709262572553fa056d8d0a.svg" style="width: 80px;"></a></li>
