--- a/index.html
+++ b/index.html
@@ -84,18 +84,45 @@
 <!-- Login Modal -->
 <div class="modal" id="login-modal">
     <div class="modal-content">
-        <h3>Login</h3>
-        <div class="form-group">
-            <label>Username</label>
-            <input type="text" id="login-username" placeholder="Enter username">
+        <div class="auth-tabs">
+            <button class="auth-tab active" data-tab="login">Login</button>
+            <button class="auth-tab" data-tab="signup">Sign Up</button>
         </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" id="login-password" placeholder="Enter password">
+        
+        <div class="auth-form" id="login-form" style="display: block;">
+            <h3>Login</h3>
+            <div class="form-group">
+                <label>Username</label>
+                <input type="text" id="login-username" placeholder="Enter username">
+            </div>
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" id="login-password" placeholder="Enter password">
+            </div>
+            <div class="modal-actions">
+                <button id="login-modal-cancel" class="action-btn remove-btn">Cancel</button>
+                <button id="login" class="action-btn watch-btn">Login</button>
+            </div>
         </div>
-        <div class="modal-actions">
-            <button id="login-modal-cancel" class="action-btn remove-btn">Cancel</button>
-            <button id="login" class="action-btn watch-btn">Login</button>
+
+        <div class="auth-form" id="signup-form" style="display: none;">
+            <h3>Sign Up</h3>
+            <div class="form-group">
+                <label>Username</label>
+                <input type="text" id="signup-username" placeholder="Choose a username">
+            </div>
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" id="signup-password" placeholder="Choose a password">
+            </div>
+            <div class="form-group">
+                <label>Confirm Password</label>
+                <input type="password" id="signup-confirm-password" placeholder="Confirm your password">
+            </div>
+            <div class="modal-actions">
+                <button id="signup-modal-cancel" class="action-btn remove-btn">Cancel</button>
+                <button id="signup" class="action-btn watch-btn">Sign Up</button>
+            </div>
         </div>
     </div>
 </div>
