--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     </div>
 </div>
 <footer style="margin-left: auto; margin-right: auto; text-align: center;">
-    Made with ❤️ by <a href="https://github.com/AlexPGdev" target="_blank" style="color: white;">AlexPG</a>
+    Made with <span>❤️</span> by <a href="https://github.com/AlexPGdev" target="_blank" style="color: white;">AlexPG</a>
     <br>
     <p style="font-size: 13px;">This product uses the TMDB API but is not endorsed or certified by TMDB.</p>
 </footer>
