Add more view options

--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
         <button id="filter-tab-all" class="filter-tab active">All Movies</button>
         <button id="filter-tab-to-watch" class="filter-tab">To Watch</button>
         <button id="filter-tab-watched" class="filter-tab">Watched</button>
+        <div class="view-controls">
+            <button id="grid-view-btn" class="view-btn active" title="Grid View">⊞</button>
+            <button id="list-view-btn" class="view-btn" title="List View">≡</button>
+            <div class="grid-size-control">
+                <button id="decrease-grid-btn" class="grid-size-btn" title="Decrease Grid Size">-</button>
+                <span id="grid-size-value">3</span>
+                <button id="increase-grid-btn" class="grid-size-btn" title="Increase Grid Size">+</button>
+            </div>
+        </div>
     </div>
 
     <div class="movies-grid" id="movies-grid">
