--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 <ul>
                     <li>Movie data provided by <a href="https://www.themoviedb.org" target="_blank" style="color: #00ffff;"><img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg" style="width: 80px;"></a></li>
                     <li>Streaming availability data provided by <a href="https://www.justwatch.com/" target="_blank" style="color: #00ffff;"><img src="https://www.themoviedb.org/assets/2/v4/logos/justwatch-c2e58adf5809b6871db650fb74b43db2b8f3637fe3709262572553fa056d8d0a.svg" style="width: 80px;"></a></li>
-                    <li>Movie ratings provided by <a href="https://www.omdbapi.com/" target="_blank" style="color: white;">OMDb API</a></li>
+                    <li>Additional movie data provided by <a href="https://www.omdbapi.com/" target="_blank" style="color: white;">OMDb API</a></li>
                 </ul>
             </div>
         </div>
